syntax = "proto3";

package com.apptorise.dailyverse.protos.auth.v1;

import "user/v1/user.proto";

option java_multiple_files = true;
option java_package = "com.apptorise.dailyverse.protos.auth";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc SignInWithEmail (EmailSignInRequest) returns (AuthResponse);
  rpc SignInWithGoogle (GoogleSignInRequest) returns (AuthResponse);
  rpc SignInWithApple (AppleSignInRequest) returns (AuthResponse);
  rpc RefreshToken (RefreshRequest) returns (AuthResponse);
}

message EmailSignInRequest {
  string email = 1;
  string password = 2;
}

message GoogleSignInRequest {
  string id_token = 1;
}

message AppleSignInRequest {
  string id_token = 1;
}

message RefreshRequest {
  string refresh_token = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  User user = 3;
}